--- a/src/index.css
+++ b/src/index.css
@@ -1429,6 +1429,9 @@ body {
   height: 100%;
   z-index: 15;
 }
+.black-b {
+  color: white;
+}
 
 .full-image-background {
   position: absolute;
@@ -1447,9 +1450,12 @@ body {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
-  max-width: 80%;
-  max-height: 80%;
+  border-radius: 1.4vw;
+  transform: translate(5%, -50%) scale(1); /* Уменьшить изображение на 20% */
+  object-fit: cover;
+  object-position: 67% center; /* Смещение изображения внутри контейнера вправо */
+  width: 25vw; /* Ширина по вашему выбору */
+  height: 33.33vw; /* Высота также сделана равной ширине, чтобы сделать изображение квадратным */
 }
 .bottle-float-left.berry {
   position: absolute;
@@ -2021,7 +2027,7 @@ height: auto;
   font-weight: 700;
   line-height: 2.08vw;
   position: absolute;
-  margin: 35.7vw 23vw 5vw 66.6vw;
+  margin: 36.4vw 23vw 5vw 65.6vw;
   z-index: 1;
 }
 .absolute-text.vlad {
@@ -2034,7 +2040,7 @@ height: auto;
   margin: 37.8vw 21vw 5vw 7.6vw;
   z-index: 1;
 }
-.absolute-text.nv{
+.absolute-text.nv {
   width: 25vw;
   color: rgba(255, 255, 255, 0.5);
   font-family: "Inter";
@@ -2042,7 +2048,7 @@ height: auto;
   font-weight: 700;
   line-height: 2.08vw;
   position: absolute;
-  margin: 0vw 21vw 5vw 62vw;
+  margin: 0.5vw 21vw 5vw 61vw;
 }
 .absolute-text.chel {
   color: rgba(255, 255, 255, 0.5);
@@ -2359,7 +2365,7 @@ height: auto;
   height: 26.17vw;
   margin-left: -1.5vw;
   margin-top: 7vw;
-  border-radius: 2.43vw;
+  border-radius: 1.43vw;
 }
 .prizesShow .slick-prev {
   margin-left: 2.3vw !important;
@@ -2450,6 +2456,17 @@ display: none !important;
   margin-left: 4.2vw;
   margin-top: 1.8vw;
   height: 27.82vw;
+}
+.green-background-full-image {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1;
+  width: 53.47vw;
+  height: 34.72vw;
+  border-radius: 2vw;
+  background: linear-gradient(to top, rgba(0, 98, 65, 1), rgba(91, 171, 113, 1));
 }
 
 .scrollbar-thumb {
@@ -2546,7 +2563,7 @@ display: none !important;
   color: white;
   font-family: 'Acrom Medium', AutumnSweaterLaimon, sans-serif;
   font-weight: 400;
-  font-size: 2.15vw;
+  font-size: 2vw;
   line-height: 2.71vw;
   background-color: rgba(0, 98, 65, 1);
 }
@@ -2584,21 +2601,121 @@ display: none !important;
   font-size: 1.25vw;
   line-height: 1.53vw;
 }
+.text-img-name {
+  margin: 1.2vw 0vw 0vw 0vw;
+  width: 0vw;
+  font-family: 'AutumnSweaterLaimon', Arial, sans-serif;
+  font-weight: 400;
+  font-size: 2.0vw;
+  line-height: 1.96vw;
+  color: white;
+  float: left;
+  white-space: nowrap;
+}
+.text-img-name.number-open {
+  margin: 6.2vw 0vw 0vw 1.5vw;
+  width: 0vw;
+  font-family: 'AutumnSweaterLaimon', Arial, sans-serif;
+  font-weight: 400;
+  font-size: 2.43vw;
+  line-height: 2.43vw;
+  color: white;
+  float: left;
+  white-space: nowrap;
+}
+.text-img-name.down-open {
+  position: absolute;
+  margin: 9.2vw 0vw 0vw 1.5vw;
+  width: 25.5vw;
+  font-family: 'AutumnSweaterLaimon', Arial, sans-serif;
+  font-weight: 400;
+  font-size: 1.74vw;
+  line-height: 1.74vw;
+  text-transform: none;
+  text-align: left;
+  color: white;
+  float: left;
+  white-space: normal;
+}
+.text-img-name.down-open-down {
+  position: absolute;
+  margin: 12.2vw 0vw 0vw 1.5vw;
+  width: 23.5vw;
+  font-family: Inter;
+  font-weight: 400;
+  font-size: 0.7vw;
+  line-height: 0.7vw;
+  text-transform: none;
+  text-align: left;
+  color: white;
+  float: left;
+  white-space: normal;
+}
+.text-img-name.down {
+  position: absolute;
+  margin: 4.2vw 0vw 0vw 0vw;
+  width: 13.5vw;
+  font-family: Inter;
+  font-weight: 400;
+  font-size: 0.97vw;
+  line-height: 1.16vw;
+  text-transform: none;
+  text-align: left;
+  color: white;
+  float: left;
+  white-space: normal;
+}
 .cards-img {
   position: relative;
   z-index: 1;
-  width: 18.75vw;
-  height: 24.31vw;
+  width: 14.75vw;
+  height: auto;
+  margin: 0vw 0vw 0vw 0vw;
+}
+.green-background {
+  padding-top: 0.7vw;
+  padding-left: 0.7vw;
+  position: relative;
+  z-index: 1;
+  width: 15.75vw;
+  height: 22vw;
+  border-radius: 2vw;
+  background: linear-gradient(to top, rgba(0, 98, 65, 1), rgba(91, 171, 113, 1));
+}
+.green-background:hover {
+  cursor: pointer;
+}
+
+.cards-img.number {
+  margin: 0.15vw 0vw 0vw 0.15vw;
+  position: absolute;
+  z-index: 2;
+  width: 2.75vw;
+  height: auto;
+}
+.cards-img.number-open {
+  margin: 1.05vw 0vw 0vw -25.85vw;
+  position: absolute;
+  z-index: 2;
+  width: 3.75vw;
+  height: auto;
+}
+.cards-img.up{
+  margin: 7.05vw 0vw 0vw 13.15vw;
+  position: absolute;
+  z-index: 2;
+  width: 1.75vw;
+  height: auto;
 }
 .cards-img.cursor-pointer {
   cursor: pointer;
 }
 .cards-img.enlarge {
-  transform: scale(1.1); /* Изображение увеличивается в 1.2 раза */
-  transition: transform 0.3s ease; /* Анимация изменения масштаба */
+  /*transform: scale(1.1); !* Изображение увеличивается в 1.2 раза *!*/
+  /*transition: transform 0.3s ease; !* Анимация изменения масштаба *!*/
 }
 .cards-img {
-  transition: transform 0.5s ease; /* Задаем CSS transition для свойства transform */
+  /*transition: transform 0.5s ease; !* Задаем CSS transition для свойства transform *!*/
 }
 
 .enlarge {
@@ -3187,7 +3304,7 @@ backface-visibility: hidden;
 .million {
   margin: -3vw 0vw 0vw 1.9vw;
   width: 26.88vw;
-  height: 26.88vw;
+  height: auto;
 }
 .left-p-name-low {
   margin: 0vw 0vw 0vw 7.1vw;
@@ -6360,13 +6477,88 @@ cursor: pointer;
     margin-top: 47.9vw;
     margin-left: 14.43vw;
   }
-  .full-image {
-    left: 50%;
-    height: auto;
-    width: 90vw;
+  .green-background-full-image {
     position: absolute;
     top: 50%;
+    left: 50%;
     transform: translate(-50%, -50%);
+    max-width: 100%;
+    max-height: 100%;
+    z-index: 1;
+    width: 68.75vw;
+    height: 120vw;
+    border-radius: 2vw;
+    background: linear-gradient(to top, rgba(0, 98, 65, 1), rgba(91, 171, 113, 1));
+  }
+  .block-block {
+    display: block;
+  }
+  .full-image {
+    left: 51%;
+    height: 35vw;
+    width: 55vw;
+    position: absolute;
+    top: 29%;
+    transform: translate(-52%, -50%);
+    object-fit: cover;
+    object-position: 31% center;
+  }
+  .text-img-name.number-open {
+    position: absolute;
+    top: 0%;
+    left: 47%;
+    transform: translate(-50%, -50%);
+    width: 55.5vw;
+    font-family: 'AutumnSweaterLaimon', Arial, sans-serif;
+    font-weight: 400;
+    font-size: 5.43vw;
+    line-height: 5.43vw;
+    text-align: center; /* Горизонтальное выравнивание по центру */
+    color: white;
+    white-space: nowrap;
+    text-transform: none;
+    float: none !important;
+  }
+  .container-flex-img {
+    display: flex;
+    align-items: flex-start; /* Выравнивание по верхнему краю */
+  }
+  .cards-img.number-open {
+    margin: 2.05vw 0vw 0vw 1.15vw;
+    position: absolute;
+    z-index: 2;
+    width: 9.75vw;
+    height: auto;
+  }
+  .text-img-name.down-open {
+    position: absolute;
+    margin: auto;
+    top: 10%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 55.5vw;
+    font-family: 'AutumnSweaterLaimon', Arial, sans-serif;
+    font-weight: 400;
+    font-size: 3.74vw;
+    line-height: 3.74vw;
+    text-transform: none;
+    text-align: center; /* Горизонтально по центру */
+    color: white;
+    white-space: normal;
+    float: none !important;
+  }
+  .text-img-name.down-open-down {
+    position: fixed;
+    margin: 52.2vw 0vw 0vw 2.5vw;
+    width: 63.5vw;
+    flex: 1 1;
+    font-family: Inter;
+    font-weight: 400;
+    font-size: 2.0vw;
+    line-height: 2.1vw;
+    text-align: left;
+    color: white;
+    white-space: normal;
   }
   .absolute-text-mobile.bon9 {
     z-index: 0;
@@ -6477,7 +6669,7 @@ cursor: pointer;
     background-color: rgba(245, 245, 237, 0.7);
     width: 43.87vw;
     height: 50.17vw;
-    margin-left: 11.5vw;
+    margin-left: 10.5vw;
     margin-top: 15vw;
     border-radius: 6.43vw;
     margin-bottom: 10vw;
@@ -6490,7 +6682,7 @@ cursor: pointer;
     font-family: AutumnSweaterLaimon;
   }
   .center .slick-prev {
-    margin-left: -23.3vw !important;
+    margin-left: -21.88vw !important;
     margin-top: 5vw;
   }
   .center .slick-next {
@@ -6504,10 +6696,49 @@ cursor: pointer;
     margin: 2vw;
   }
   .cards-img {
-    margin-left: 0vw;
+    margin: 1vw 0vw 0vw 1vw;
     position: relative;
     z-index: 1;
-    width: 39.75vw;
+    width: 36.75vw;
+    height: auto;
+  }
+  .cards-img.number {
+    margin: 1.15vw 0vw 0vw 1.15vw;
+    position: absolute;
+    z-index: 2;
+    width: 7.75vw;
+    height: auto;
+  }
+  .text-img-name {
+    margin: 1.2vw 0vw 0vw 1.8vw;
+    width: 0vw;
+    font-family: 'AutumnSweaterLaimon', Arial, sans-serif;
+    font-weight: 400;
+    font-size: 4.03vw;
+    line-height: 4.96vw;
+    color: white;
+    float: left;
+    white-space: nowrap;
+  }
+  .text-img-name.down {
+    position: absolute;
+    margin: 6.2vw 0vw 0vw 2vw;
+    width: 31.5vw;
+    font-family: Inter;
+    font-weight: 400;
+    font-size: 2.17vw;
+    line-height: 2.16vw;
+    text-transform: none;
+    text-align: left;
+    color: white;
+    float: left;
+    white-space: normal;
+  }
+  .cards-img.up {
+    margin: 8.05vw 0vw 0vw 33.15vw;
+    position: absolute;
+    z-index: 2;
+    width: 3.75vw;
     height: auto;
   }
 
@@ -6745,7 +6976,24 @@ cursor: pointer;
     margin: 0 auto;
     margin-top: 9vw;
   }
-
+  .centered-container {
+    z-index: 5 !important;
+    width: 86% !important;
+  }
+  .centered-container.jss2 {
+    z-index: 5 !important;
+    width: 86% !important;
+  }
+  .green-background {
+    padding-top: 0.7vw;
+    padding-left: 0.7vw;
+    position: relative;
+    z-index: 1;
+    width: 39.75vw;
+    height: 46vw;
+    border-radius: 6vw;
+    background: linear-gradient(to top, rgba(0, 98, 65, 1), rgba(91, 171, 113, 1));
+  }
 
 
 }
