--- a/src/index.css
+++ b/src/index.css
@@ -1426,7 +1426,7 @@ body {
   margin-top: 23.75vw;
   margin-left: -47.17vw;
   width: 51.5%;
-  height: 5.5%;
+  height: auto;
   z-index: 4;
   right: 0;
 
