--- a/src/index.css
+++ b/src/index.css
@@ -6296,6 +6296,7 @@ cursor: pointer;
   }
   .register-inputs.code-bottom {
     margin-bottom: 2.8vw;
+    margin-left: 2vw;
   }
   .register-button.code-down {
     margin-top: 3vw;
