--- a/src/index.css
+++ b/src/index.css
@@ -2866,7 +2866,7 @@ display: none !important;
   width: 22.5% !important;
 }
 .test-img.pol15 {
-  margin: -18.9vw 0vw -1.65vw 7.05vw !important;
+  margin: -18.9vw 0 -2.0vw 7.05vw !important;
   position: relative !important;
   width: 23.5% !important;
 }
