--- a/src/index.css
+++ b/src/index.css
@@ -1266,11 +1266,23 @@ body {
   transition: opacity 0.3s ease;
 }
 .bottle-float-left.success-email {
-  margin: -13.34vw 0vw 0vw 32vw;
+  margin: -12.84vw 0vw 0vw 32vw;
+}
+.bottle-float-left.success-email-new {
+  margin: -0.84vw 0vw 0vw 32vw;
 }
 .bottle-float-left.success-image {
   padding-right: 0.7vw;
   margin: -10.5vw 0vw 0vw -4.5vw;
+  position: absolute;
+  width: 8.81vw;
+  height: auto;
+  z-index: 5;
+  transition: opacity 0.3s ease;
+}
+.bottle-float-left.success-image-new {
+  padding-right: 0.7vw;
+  margin: 1.5vw 0vw 0vw -4.5vw;
   position: absolute;
   width: 8.81vw;
   height: auto;
@@ -1367,6 +1379,20 @@ body {
   text-align: center;
   margin-bottom: 4vw;
 }
+.register-main-text.new-meow-second {
+  text-align: center;
+  margin-bottom: 5.4vw;
+}
+.register-main-text.new-meow-1 {
+  position: absolute;
+  text-align: left;
+  margin: -2.6vw 15vw 0vw -2.4vw;
+}
+.register-main-text.new-meow-2 {
+  text-align: left;
+  position: absolute;
+  margin: -4.6vw 15vw 0vw -2.4vw;
+}
 .register-main-text.fail-red {
   margin-top: 16vw;
   text-align: center;
@@ -1448,7 +1474,17 @@ body {
   margin-top: -3vw;
   margin-left: 0vw;
 }
-
+.register-inputs-text.new-reg-number {
+  width: 23vw;
+  color: white;
+  display: flex;
+  align-items: center;
+  height: 100%;
+  text-align: left;
+  margin-bottom: 4.5vw;
+  margin-top: -3vw;
+  margin-left: 8vw;
+}
 
 .bottle-float-left.exit-register:hover {
   cursor: pointer;
@@ -4504,6 +4540,42 @@ cursor: pointer;
   scrollbar-width: thin;
   width: 22.8vw;
 }
+.popup-content-code.success-reg-new {
+  width: 71.697vw !important;
+}
+.success-reg-new-left {
+  float: left;
+  width: calc(50% - 1px);
+  padding-right: 5px; /* Add space to separate the line */
+  /* Other styles for the left part */
+  box-sizing: border-box; /* Include padding in the width calculation */
+}
+
+.success-reg-new-right {
+  float: right;
+  width: calc(50% - 1px);
+  padding-left: 5px; /* Add space to separate the line */
+  /* Other styles for the right part */
+  box-sizing: border-box; /* Include padding in the width calculation */
+  margin-top: -9.5vw;
+  text-align: left;
+}
+.container-right {
+  display: block;
+  margin: 0vw 1.7vw 0vw 0vw;
+  padding-top: 1vw;
+}
+.vertical-line-reg {
+  border-left: 2px solid #A3D441;
+  height: 23vw;
+  box-sizing: border-box;
+  position: relative;
+  margin: -24vw 0vw 1vw 35.5vw;
+  z-index: 55;
+}
+.horiz-line-reg {
+  display: none;
+}
 .popup-content-code {
   height: 18.4vw;
 }
@@ -6211,6 +6283,9 @@ cursor: pointer;
   .bottle-float-left.success-email {
     margin: -20.2vw 0vw 0vw 35vw;
   }
+  .bottle-float-left.success-email-new {
+    margin: -20.2vw 0vw 0vw 35vw;
+  }
   .register-button {
     font-size: 4.74vw;
     font-family: Inter;
@@ -6776,7 +6851,7 @@ cursor: pointer;
     align-items: center;
     height: 100%;
     text-align: center;
-    margin-bottom: 2.5vw;
+    margin-bottom: 5.5vw;
     margin-top: -1vw;
     margin-left: 0vw;
   }
@@ -7230,5 +7305,78 @@ cursor: pointer;
     height: auto;
     z-index: 5;
   }
+  .popup-content-code.success-reg-new {
+    width: 83.697vw !important;
+  }
+  .vertical-line-reg {
+   display: none;
+  }
+  .register-inputs-text.new-reg-number {
+    width: 64vw;
+    color: white;
+    display: flex;
+    align-items: center;
+    height: 100%;
+    text-align: left;
+    margin-bottom: 5.5vw;
+    margin-top: -3vw;
+    margin-left: 8vw;
+  }
+  .bottle-float-left.success-image-new {
+    padding-right: 0.7vw;
+    margin: -17.5vw 0vw 0vw -9.5vw;
+    position: absolute;
+    width: 16.81vw;
+    height: auto;
+    z-index: 5;
+    transition: opacity 0.3s ease;
+  }
+  .success-reg-new-left {
+    float: none;
+    width: 50vw;
+    margin-left: 11vw;
+    box-sizing: border-box;
+  }
+  .success-reg-new-right {
+    float: none;
+    padding-left: 5px;
+    box-sizing: border-box;
+    margin-top: -9.5vw;
+    text-align: left;
+  }
+  .register-main-text.new-meow-second {
+    width: 69vw;
+    margin-top: 15vw;
+    margin-left: -3vw;
+    text-align: center;
+    margin-bottom: 6.4vw;
+  }
+
+  .horiz-line-reg {
+    position: absolute;
+    display: block;
+    border-bottom: 2px solid #A3D441;
+    width: 84%;
+    margin: 0px auto;
+    margin-left: -10vw;
+  }
+  .register-main-text.new-meow-1 {
+    position: absolute;
+    text-align: left;
+    margin: -6.6vw 14vw 0vw -5.4vw;
+  }
+  .register-main-text.new-meow-2 {
+    text-align: left;
+    position: absolute;
+    margin: -9.6vw 14vw 0vw -5.4vw;
+  }
+  .container-right {
+    display: block;
+    margin: 1vw -2.3vw 0vw 2vw;
+    padding-top: 1vw;
+  }
+
+
+
 
 }
