--- a/src/index.css
+++ b/src/index.css
@@ -1189,6 +1189,47 @@ body {
   left: -25%;
   top: -12.50vw;
 }
+@keyframes fade-in {
+  from {
+    opacity: 0;
+    transform: translateY(-10px);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@keyframes fade-out {
+  from {
+    opacity: 1;
+    transform: translateY(0);
+  }
+
+  to {
+    opacity: 0;
+    transform: translateY(-10px);
+  }
+}
+@keyframes fade-in-out {
+  0% { opacity: 0; }
+  10% { opacity: 1; }
+  90% { opacity: 1; }
+  100% { opacity: 0; }
+}
+.copied-notification {
+  color: rgba(0, 98, 65, 1);
+  font-family: Inter;
+  font-weight: 400;
+  position: absolute;
+  margin: -20.7vw 0vw 0vw 39.5vw;
+  animation: fade-in-out 1.5s ease-out;
+}
+
+.copied-notification--hidden {
+  animation: fade-out 0.3s ease forwards;
+}
 
 /*#wave-test:after {*/
 /*  content: "";*/
@@ -2245,6 +2286,7 @@ height: auto;
 .faq-question a:hover{
 }
 .faq-question-p-a {
+  cursor: pointer;
   font-size: 1.74vw;
   line-height: 2.08vw;
   font-family: Inter;
@@ -7153,6 +7195,16 @@ cursor: pointer;
   .error-clear {
     text-decoration: none;
     color: white;
+  }
+  .copied-notification {
+    color: rgba(0, 98, 65, 1);
+    font-family: Inter;
+    font-weight: 400;
+    font-size: 4.33vw;
+    line-height: 5.40vw;
+    position: absolute;
+    margin: -20vw 0vw 0vw 23vw;
+    animation: fade-in-out 1.5s ease-out;
   }
   .error-text {
     color: rgba(0, 98, 65, 1);
