--- a/src/index.css
+++ b/src/index.css
@@ -6466,6 +6466,17 @@ cursor: pointer;
     margin-bottom: 5vw;
     margin-left: 0vw;
   }
+  .register-inputs-text.code-left-email {
+    width: 62vw;
+    text-align: center;
+    color: rgba(255, 255, 255, 1);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    margin-bottom: 5vw;
+    margin-left: -1vw;
+  }
   .register-inputs.code-bottom {
     margin-bottom: 2.8vw;
     margin-left: 2vw;
