--- a/src/index.css
+++ b/src/index.css
@@ -1015,7 +1015,47 @@ body {
   width: 76vw;
   height: 27.25vw;
 }
-
+.content-right-u {
+  position: absolute;
+  margin: -30.85vw 0vw 0vw 26vw;
+  background-color: #FFC828;
+  border-bottom-right-radius: 2.08vw;
+  border-top-right-radius: 2.08vw;
+  flex: 1 1;
+  display: flex;
+  width: 26vw;
+  height: 32.48vw;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+}
+.lfur-r {
+  position: absolute;
+  margin: -6vw 0vw 0vw -49vw;
+  width: 81vw;
+  height: auto;
+  opacity: 0.7;
+}
+.lfur-r-linef {
+  position: absolute;
+  margin: -30.91vw 0vw 0vw 25.7vw;
+  z-index: 1;
+  width: 1.9864vw;
+  height: auto;
+}
+.lfur-r-btl {
+  margin: 1vw 0vw 0vw -4.3vw;
+  width: 25vw;
+  z-index: 3;
+  height: auto;
+}
+.lfur-r-tct {
+  position: absolute;
+  margin: -21vw 0vw 0vw 22vw;
+  z-index: 2;
+  width: 15vw;
+  height: auto;
+}
 #wave-test-2:before {
   content: "";
   display: block;
@@ -1314,6 +1354,26 @@ body {
   z-index: 5;
   transition: opacity 0.3s ease;
 }
+.bottle-float-left.exit-register-u {
+  right: 0;
+  padding-right: 0.7vw;
+  margin: -6.2vw 0vw 0vw 35vw;
+  position: absolute;
+  width: 3.40vw;
+  height: 3.40vw;
+  z-index: 5;
+  transition: opacity 0.3s ease;
+}
+
+.bottle-float-left.u {
+  padding-right: 0.7vw;
+  margin: -1.2vw 0vw 0vw 0vw;
+  position: absolute;
+  width: 5.4vw;
+  height: auto;
+  z-index: 5;
+  transition: opacity 0.3s ease;
+}
 .bottle-float-left.success-email {
   margin: -12.84vw 0vw 0vw 32vw;
 }
@@ -1395,6 +1455,18 @@ body {
   font-weight: 400;
   line-height: 3.61vw;
 }
+.register-main-text.u {
+  width: 25vw;
+  display: flex; /* Используем Flexbox */
+  justify-content: center; /* Центрирование по горизонтали */
+  align-items: center; /* Центрирование по вертикали */
+  height: 100%; /* Для центрирования по вертикали */
+  color: #FFFFFF;
+  font-family: 'AutumnSweaterLaimon', Arial, sans-serif;
+  font-size: 2.78vw;
+  font-weight: 400;
+  line-height: 3vw;
+}
 .register-main-text.soon {
   width: 34vw;
   margin: 4vw 0vw 0vw 2vw;
@@ -1448,6 +1520,9 @@ body {
   color: rgba(227, 29, 26, 1);
 }
 .simplebar-scrollbar.simplebar-visible {
+}
+.register-inputs-mobile {
+  display: none;
 }
 .register-inputs-text {
   text-align: left;
@@ -1503,6 +1578,53 @@ body {
   margin-bottom: 3.5vw;
   margin-left: 0vw;
 }
+.register-inputs-text.u {
+  width: 19vw;
+  text-align: left;
+  color: rgba(255, 255, 255, 1);
+  display: flex; /* Используем Flexbox */
+  justify-content: center; /* Центрирование по горизонтали */
+  align-items: center; /* Центрирование по вертикали */
+  height: 100%; /* Для центрирования по вертикали */
+  margin-bottom: 3.5vw;
+  margin-left: 0vw;
+  font-weight: 600;
+}
+.link-here-mobile {
+  display: none;
+}
+.link-here {
+  background-image: linear-gradient(to right, #FFC828, #E31D1A, #E31D1A);
+  margin: -6.7vw 0vw 0vw 16.7vw;
+  padding: 0.2vw 0.8vw 0.2vw 0.8vw;
+  border-radius: 2vw;
+  position: absolute;
+  cursor: pointer;
+  font-family: Inter;
+  font-weight: 600;
+  font-size: 1.18vw;
+  line-height: 1.46vw;
+  text-decoration: none;
+  color: #FFFFFF;
+  opacity: 1;
+  transition: opacity 0.3s ease;
+}
+.link-here:hover {
+  opacity: 0.8;
+}
+.register-inputs-text.u2 {
+  font-weight: 600;
+  margin-top: -1vw;
+  width: 23vw;
+  text-align: left;
+  color: rgba(255, 255, 255, 1);
+  display: flex; /* Используем Flexbox */
+  justify-content: center; /* Центрирование по горизонтали */
+  align-items: center; /* Центрирование по вертикали */
+  height: 100%; /* Для центрирования по вертикали */
+  margin-bottom: 3.5vw;
+  margin-left: -0.8vw;
+}
 .register-inputs-text.new-password {
   color: rgba(163, 212, 65, 1);
   display: flex; /* Используем Flexbox */
@@ -1536,6 +1658,10 @@ body {
 }
 
 .bottle-float-left.exit-register:hover {
+  cursor: pointer;
+  opacity: 0.6;
+}
+.bottle-float-left.exit-register-u:hover {
   cursor: pointer;
   opacity: 0.6;
 }
@@ -7476,6 +7602,108 @@ cursor: pointer;
   }
 
 
-
-
+  .Modal-add-u {
+    width: 96.188vw !important;
+    height: 34.146vw !important;
+  }
+  .content-right-u {
+    position: absolute;
+    margin: -29.9vw 0vw 0vw 65.4vw;
+    background-color: #FFC828;
+    border-bottom-right-radius: 2.08vw;
+    border-top-right-radius: 2.08vw;
+    flex: 1 1;
+    display: flex;
+    width: 29vw;
+    height: 34.1vw;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+  }
+  .register-main-text.u {
+    width: 63vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    color: #FFFFFF;
+    font-family: 'AutumnSweaterLaimon', Arial, sans-serif;
+    font-size: 4.064vw;
+    font-weight: 400;
+    line-height: 4vw;
+    margin-left: -4.4vw;
+  }
+.register-inputs-mobile {
+  display: flex;
+  width: 49vw;
+  text-align: left;
+  color: rgba(255, 255, 255, 1);
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  margin-bottom: 3.5vw;
+  margin-left: -2vw;
+  font-weight: 600;
+  font-size: 2.338vw;
+  line-height: 2.922vw;
+}
+  .lfur-r-linef {
+    position: absolute;
+    margin: -30.105vw 0vw 0vw 65.2vw;
+    z-index: 1;
+    width: 2.0584vw;
+    height: auto;
+  }
+  .register-inputs-text.u2 {
+    display: none;
+  }
+  .register-inputs-text.u {
+    display: none;
+  }
+  .lfur-r-btl {
+    margin: 1vw 0vw 0vw -10.3vw;
+    width: 28vw;
+    z-index: 3;
+    height: auto;
+  }
+  .lfur-r-tct {
+    position: absolute;
+    margin: -13vw 0vw 0vw 58vw;
+    z-index: 2;
+    width: 17vw;
+    height: auto;
+  }
+  .bottle-float-left.exit-register-u {
+    right: 0;
+    padding-right: 0.7vw;
+    margin: -8.2vw 0vw 0vw 35vw;
+    position: absolute;
+    width: 7vw;
+    height: auto;
+    z-index: 5;
+    transition: opacity 0.3s ease;
+  }
+  .link-here-mobile {
+    display: flex;
+    background-image: linear-gradient(to right, #FFC828, #E31D1A, #E31D1A);
+    margin: -0.7vw 0vw 0vw -2.3vw;
+    padding: 1.2vw 1.8vw 1.2vw 1.8vw;
+    border-radius: 2vw;
+    position: absolute;
+    cursor: pointer;
+    font-family: Inter;
+    font-weight: 600;
+    font-size: 2.18vw;
+    line-height: 2.46vw;
+    text-decoration: none;
+    color: #FFFFFF;
+    opacity: 1;
+    transition: opacity 0.3s ease;
+  }
+  .link-here {
+   display: none;
+  }
+  .bottle-float-left.u {
+   display: none;
+  }
 }
